--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -1,4 +1,4 @@
-name: Lint
+name: Black Linting
 
 on:
   push:
@@ -26,13 +26,3 @@ jobs:
         with:
           options: "--check --diff"
           src: "."
-
-# jobs:
-#   lint:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v2
-#       - uses: psf/black@stable
-#         with:
-#           options: "--check --diff"
-#           src: "."
